--- a/src/components/Challenges/Challenges.module.css
+++ b/src/components/Challenges/Challenges.module.css
@@ -1,5 +1,8 @@
 .container {
     margin-bottom: 2.5rem;
+    max-width: 100%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .title {
@@ -23,6 +26,8 @@
     margin-left: -2rem;
     margin-top: 1.25rem;
     overflow: hidden;
+    max-width: 100vw;
+    box-sizing: border-box;
 }
 
 .sliderWrapper::before,
